--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -443,6 +443,63 @@
           </div>
         </mat-card>
       </div>
+      <div class='col-lg-12 col-md-12  mt-4'>
+        <mat-card class='p-0'>
+
+          <div class='container-fluid p-0'>
+
+            <div class='row'>
+              <div class='row m-0 px-3 mt-3 '>
+                <div class='col-12'>
+                  <div class='d-flex align-items-center mb-3'>
+                    <mat-icon class='mr-1 card-icon' color='primary'>people_alt</mat-icon>
+                    <h4 class='mat-h4 mb-0 text-color__primary font-calibri'>Goals List</h4>
+                  </div>
+                </div>
+              </div>
+              <div class='col-12 tableOverFlow'>
+                <table mat-table [dataSource]='goalsTable' class='w-100'>
+                  <ng-container matColumnDef='position'>
+                    <th mat-header-cell *matHeaderCellDef >{{'Position' | titlecase}}</th>
+                    <td mat-cell *matCellDef='let element,  let i = index'
+                    > {{(i + 1) || '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='goalAnswerString'>
+                    <th mat-header-cell *matHeaderCellDef>{{'Goal Anwser' | titlecase}}</th>
+                    <td mat-cell *matCellDef='let element'
+                        [matTooltip]='element.goalAnswerString'> {{(element.goalAnswerString) || '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='id'>
+                    <th mat-header-cell *matHeaderCellDef [width]='150'>{{' Id' | titlecase}}</th>
+                    <td mat-cell *matCellDef='let element'
+                    > {{(element.id) || '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='count'>
+                    <th mat-header-cell *matHeaderCellDef>{{' Count' | titlecase}}</th>
+                    <td mat-cell *matCellDef='let element'
+                    > {{(element.count) || '--  '}} </td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef='displayedColumnsGoals; sticky:true'></tr>
+                  <tr mat-row *matRowDef='let row; columns: displayedColumnsGoals;' class='row-react'></tr>
+                </table>
+              </div>
+            </div>
+<!--            <div class='row mt-2'>-->
+<!--              <div class='col'></div>-->
+<!--              <div class='col-6'>-->
+<!--                <mat-paginator class='paginationButton'-->
+<!--                               (page)='goalsPageEvent = $event; onPaginateChangeGoals($event)'-->
+<!--                               [disabled]='store.isChangeLoading$ | async'-->
+<!--                               [pageIndex]='paginatorIndexGoals'-->
+<!--                               [pageSizeOptions]='goalsPageSizeOptions'-->
+<!--                               [showFirstLastButtons]='false'-->
+
+<!--                ></mat-paginator>-->
+<!--              </div>-->
+<!--            </div>-->
+          </div>
+        </mat-card>
+      </div>
 
       <!--      <div class='col-lg-6 col-md-12 mt-lg-0 mt-3'>-->
       <!--        <div class='row'>-->
