--- a/libs/user/user-details/src/lib/user-details.component.html
+++ b/libs/user/user-details/src/lib/user-details.component.html
@@ -155,6 +155,13 @@
               [value]='user.skinColor'
             ></hidden-innovation-common-data-field>
           </div>
+          <div class='col-4'>
+            <hidden-innovation-common-data-field
+              [isLoading]='store.isLoading$ | async'
+              [label]='constantDataService.FIELD_NAME.GOAL'
+              [value]='user.goalAnswer.answerString'
+            ></hidden-innovation-common-data-field>
+          </div>
         </div>
       </div>
 
