fix(dashboard): name changed to transgender

--- a/libs/featured/create-featured/src/lib/create-featured.component.html
+++ b/libs/featured/create-featured/src/lib/create-featured.component.html
@@ -99,7 +99,7 @@
                       [aspectRatio]='aspectRatio.CUBE'
                       [parentCtrl]='posterIDctrl'
                       [setImageData]='(selectedPosterData | async)'
-                      controlPath='posterId'
+                      controlPath='imageId'
                     ></hidden-innovation-common-form-field-image>
                   </div>
                 </div>
