--- a/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
+++ b/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
@@ -100,8 +100,8 @@
             <div class='row'>
               <div class='col-12'>
                 <div class='d-flex align-items-center mb-3 pl-2'>
-                  <mat-icon color='primary' class='mr-1 card-icon'>remove</mat-icon>
-                  <h4 class='mat-h4 mb-0 text-color__primary font-calibri'>Non Binary Age Group</h4>
+                  <mat-icon color='primary' class='mr-1 card-icon'>transgender</mat-icon>
+                  <h4 class='mat-h4 mb-0 text-color__primary font-calibri'>Transgender Age Group</h4>
                 </div>
               </div>
             </div>
@@ -169,9 +169,9 @@
                     <div class='col-12'>
                       <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.other}'>
                         <div class='d-flex align-items-center pt-1 py-0'>
-                          <mat-icon>remove</mat-icon>
+                          <mat-icon>transgender</mat-icon>
                           <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                            <h4 class='mat-h4 m-0'>Non-Binary</h4>
+                            <h4 class='mat-h4 m-0'>Transgender</h4>
                             <h2 class='mat-h1 m-0' [ngStyle]='{"color": colors.other}'>{{nonBinaryPercentage}} %</h2>
                           </div>
                         </div>
