--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -14,6 +14,8 @@
             </div>
             <div class='col-md-12 col-lg-3 mt-lg-0 mt-3'>
               <hidden-innovation-dashboard-count-card [isLoading]='store.isChangeLoading$ | async'
+                                                      [count]='store.totalUsers$ | async'
+                                                      [change]='-89'
                                                       cardTitle='Total App Downloads'
                                                       icon='file_download'></hidden-innovation-dashboard-count-card>
             </div>
