--- a/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
+++ b/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
@@ -30,7 +30,7 @@
 <ng-template #statsLoadingElse>
   <div class='container-fluid p-0'>
     <div class='row mb-4'>
-      <div class='col-lg-6 mb-4'>
+      <div class='col-lg-4 mb-4'>
         <mat-card class='pl-1'>
           <div class='container-fluid p-0'>
             <div class='row'>
@@ -62,7 +62,7 @@
           </div>
         </mat-card>
       </div>
-      <div class='col-lg-6 mb-4'>
+      <div class='col-lg-4 mb-4'>
         <mat-card class='pl-2'>
           <div class='container-fluid p-0'>
             <div class='row'>
@@ -94,7 +94,7 @@
           </div>
         </mat-card>
       </div>
-      <div class='col-lg-7 mb-2'>
+      <div class='col-lg-4 mb-2'>
         <mat-card class='pl-1'>
           <div class='container-fluid p-0'>
             <div class='row'>
@@ -119,6 +119,38 @@
                 <div class='row ' >
                   <div class='col-12 text-center'>
                     <h5 class='mat-h5 font-weight-bolder mb-0 text-color__primary font-calibri'>Age Group</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </mat-card>
+      </div>
+      <div class='col-lg-7 mb-2'>
+        <mat-card class='pl-1'>
+          <div class='container-fluid p-0'>
+            <div class='row'>
+              <div class='col-12'>
+                <div class='d-flex align-items-center mb-3 pl-2'>
+                  <mat-icon color='primary' class='mr-1 card-icon'>analytics</mat-icon>
+                  <h4 class='mat-h4 mb-0 text-color__primary font-calibri'>Overall Optimal Score </h4>
+                </div>
+              </div>
+            </div>
+            <div class='row'>
+              <div class='col-12'>
+                <canvas baseChart
+                        chartType='bar'
+                        [colors]='otherAgeBarColor'
+                        [datasets]='$any(nonBinaryBarData)'
+                        [labels]='optimalScoreLables'
+                        [legend]='chartLegend'
+                        [options]='chartOptionsOptimalScore'
+                >
+                </canvas>
+                <div class='row ' >
+                  <div class='col-12 text-center'>
+                    <h5 class='mat-h5 font-weight-bolder mb-0 text-color__primary font-calibri'>Category</h5>
                   </div>
                 </div>
               </div>
