fix(Dashboard): Overall optimal score api integration

--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -158,7 +158,7 @@
           [isLoading]='(store.isChangeLoading$ | async)'
           [maleBarData]='store.maleUsers$ | async'
           [nonBinaryBarData]='store.nonBinaryUsers$ | async'
-          [overallOptimalScore]='store.nonBinaryUsers$ | async'
+          [overallOptimalScore]='store.oosScore$ | async'
           [ratioChartData]='store.ageRatioData$ | async'></hidden-innovation-dashboard-user-demographic>
       </div>
     </div>
