--- a/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
+++ b/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
@@ -142,7 +142,7 @@
                 <canvas baseChart
                         chartType='bar'
                         [colors]='otherAgeBarColor'
-                        [datasets]='$any(nonBinaryBarData)'
+                        [datasets]='$any(overallOptimalScore)'
                         [labels]='optimalScoreLables'
                         [legend]='chartLegend'
                         [options]='chartOptionsOptimalScore'
