fix(Dashboard): Overall optimal score average total added

--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -159,6 +159,7 @@
           [maleBarData]='store.maleUsers$ | async'
           [nonBinaryBarData]='store.nonBinaryUsers$ | async'
           [overallOptimalScore]='store.oosScore$ | async'
+          [averageOOSScore]='store.totalOOSScore$ | async'
           [ratioChartData]='store.ageRatioData$ | async'></hidden-innovation-dashboard-user-demographic>
       </div>
     </div>
