fix(Questionnaire): Modal Text explanation

--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -47,6 +47,14 @@
               ></hidden-innovation-common-form-field-textarea>
             </div>
           </div>
+          <div class='row mb-2'>
+            <div class='col-12'>
+              <hidden-innovation-common-form-field-textarea
+                label='{{"Explanation" | titlecase}}'
+                controlPath='explanation'
+              ></hidden-innovation-common-form-field-textarea>
+            </div>
+          </div>
           <div class='row mb-3'>
             <div class='col-12'>
               <p class='text-muted mb-2'>Poster</p>
