Fix(image0cropper)- image optimsation

--- a/libs/media/src/lib/components/image-cropper/image-cropper.component.html
+++ b/libs/media/src/lib/components/image-cropper/image-cropper.component.html
@@ -7,7 +7,7 @@
                    [imageFile]="imageBlob"
                    [maintainAspectRatio]="true"
                    [aspectRatio]="ratioParser()"
-                   format="png"
+                   format="jpeg"
                    (imageCropped)="imageCropped($event)"
                    (cropperReady)="loadedState()"
                    (loadImageFailed)="loadImageFailed()"
