--- a/libs/user/user-details/src/lib/user-details.component.html
+++ b/libs/user/user-details/src/lib/user-details.component.html
@@ -4,9 +4,9 @@
       <div class='row mb-4 '>
         <div class='col-12 d-flex align-items-center justify-content-end'>
           <div [ngSwitch]='user.status' >
-            <button mat-flat-button *ngSwitchCase='userPosition.PENDING'   color="accent">Pending</button>
-            <button mat-flat-button *ngSwitchCase='userPosition.ACTIVE'   color="primary">Active</button>
-            <button mat-flat-button *ngSwitchCase='userPosition.VERIFY_USER'   color="warn">Verify User</button>
+            <button [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)' mat-flat-button *ngSwitchCase='userPosition.PENDING'   color="warn">Pending</button>
+            <button [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)' mat-flat-button *ngSwitchCase='userPosition.ACTIVE' color='accent' >User Verified</button>
+            <button [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)' mat-flat-button *ngSwitchCase='userPosition.VERIFY_USER' (click)='store.toggleStatus(userID,user.status)'   color="primary">Verify User</button>
           </div>
           <button [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
                   mat-flat-button color='{{user.is_blocked ? "accent" : "warn"}}' class='ml-3'
