feat(user-profile): goals user integration

--- a/libs/user/user-details/src/lib/user-details.component.html
+++ b/libs/user/user-details/src/lib/user-details.component.html
@@ -164,7 +164,7 @@
             <hidden-innovation-common-data-field
               [isLoading]='store.isLoading$ | async'
               [label]='constantDataService.FIELD_NAME.GOAL'
-              [value]='UserAnswers'
+              [goals]='UserAnswers'
             ></hidden-innovation-common-data-field>
           </div>
         </div>
