--- a/libs/test/test-create/src/lib/test-create.component.html
+++ b/libs/test/test-create/src/lib/test-create.component.html
@@ -287,7 +287,13 @@
                                                 formControlName='oneRep'>1 rep
                                   </mat-checkbox>
                                   <mat-checkbox [disabled]='disableEditState' class='mr-4' color='primary'
+                                                formControlName='twoRep'>2 rep
+                                  </mat-checkbox>
+                                  <mat-checkbox [disabled]='disableEditState' class='mr-4' color='primary'
                                                 formControlName='threeRep'>3 rep
+                                  </mat-checkbox>
+                                  <mat-checkbox [disabled]='disableEditState' class='mr-4' color='primary'
+                                                formControlName='fourRep'>4 rep
                                   </mat-checkbox>
                                   <mat-checkbox [disabled]='disableEditState' class='mr-4' color='primary'
                                                 formControlName='fiveRep'>5 rep
